--- a/index.html
+++ b/index.html
@@ -92,16 +92,28 @@
 
                         <div class="partner">
 
+                            <div class="idpartner"></div>
+
+                            <div class="datipartner"></div>
+
                         </div>
 
                         <div class="partner">
 
+                            <div class="idpartner"></div>
+
+                            <div class="datipartner"></div>
+
                         </div>
 
                         <div class="partner">
 
-                        </div>
+                            <div class="idpartner"></div>
 
+                            <div class="datipartner"></div>
+
+                        </div>
+     
                     </div>
 
                 </div>
@@ -206,6 +218,48 @@
                 </div>
 
             </div>
+
+        </section>
+
+        <section class="bg">
+
+            <div class="free">
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+            </div>
+
+        </section>
+
+        <section id="bgfoot">
+
+            <footer>
+
+                <div id="foot">
+
+                    <div id="footer">
+
+                        <div class="testimonial"><p>Lorem ipsum dolor sit amet consectetur</p></div>
+
+                        <div class="testimonial"><p><a href="#">lorem</a>Lorem ipsum dolor sit amet consectetur<a href="#">lorem</a></p></div>
+
+                        <div class="testimonial"><p><a href="#">Lorem ipsum</a></p></div>
+                
+                    </div>
+
+                </div>
+
+            </footer>
 
         </section>
 
