--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-media.css">
     <title>htmlcss-responsive-layout</title>
 </head>
 <body>
+
+<head>
 
     <nav id="blocknav">
         <div id="firstnav">
@@ -22,6 +25,9 @@
         </div>
     </nav>
 
+</head>
+
+<main>
     <section>
 
         <section>
@@ -240,6 +246,8 @@
             </div>
 
         </section>
+
+</main>
 
         <section id="bgfoot">
 
